[package]
name = "rtempest"
version = "0.1.0"
edition = "2021"

[features]
default = ["udp"]
udp = [ "dep:serde", "dep:serde_json", "dep:tokio" ]
http = [ "dep:reqwest" ]

[dependencies]
log = "0.4.21"
reqwest = { version = "0.12.7", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true}
serde_json = { version="1.0.114", optional = true }
tokio = { version = "1.36", features = ["macros", "net", "rt-multi-thread", "sync"], optional = true }
