[package]
name = "rtempest"
version = "0.1.1"
edition = "2024"
description = "A crate for retrieving and parsing WeatherFlow Tempest weather station data."
license = "Apache-2.0"

[features]
default = []

[dependencies]
log = "0.4.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49", features = ["macros", "net", "rt-multi-thread", "sync"] }
